- Added "results.html" snippet which renders a list of search results. - Refactoring of "tag_detail", "category_detail" and "search" views. - The "taxonomy" app is now using generic views instead of custom ones. - Improved CSS for result list.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@496 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -696,12 +696,6 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .menu li li a { padding-left: 40px; }
 
-#content .result-list li {
-    border-bottom: 1px solid #c0c0c0;
-    padding: 10px 0;
-    background: none;
-}
-
 #content .messages {
     width: 100%;
     border: 1px solid #ffda88;
@@ -766,6 +760,21 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 #content .notifications .read-on  {
     float: right;
     padding-right: 0;
+}
+
+#content .results dt {
+    border-bottom: 2px solid #c0c0c0;
+    background: none;
+    padding-left: 0;
+}
+
+#content .results dd { margin: 0; }
+
+#content .results li {
+    border-bottom: 1px solid #c0c0c0;
+    padding: 10px 15px 10px 35px;
+    background: no-repeat 10px 10px;
+    background-image: url(images/tag.png);
 }
 
 #content .activities dt {
