Fixed result list rendering when the found object has no "get_absolute_url" attribute.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@497 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/taxonomy/results.html
+++ b/themes/default/templates/taxonomy/results.html
@@ -8,7 +8,11 @@
     <dd>
         <ul>
             {% for object in type.list %}
+            {% if object.get_absolute_url %}
             <li><a href="{{ object.get_absolute_url }}">{{ object.title|capfirst }}</a></li>
+            {% else %}
+            <li>{{ object.title|capfirst }}</li>
+            {% endif %}
             {% endfor %}
         </ul>
     </dd>
