Improved rendering of address and phone number lists.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@504 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/partners/contact_addresses.html
+++ b/themes/default/templates/partners/contact_addresses.html
@@ -30,7 +30,7 @@
      <dl class="addresses">
         {% for type in object_by_type %}
         {% with type.list|first as first_object %}
-        <dt>{{ first_object.get_type_display }}</dt>
+        <dt>{{ first_object.get_type_display|capfirst }}</dt>
         {% endwith %}
         <dd>
             <ul>
