Improved changes notifications.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@506 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/streams/activities/object-changed.html
+++ b/themes/default/templates/streams/activities/object-changed.html
@@ -5,11 +5,11 @@
 {% endblocktrans %}
 <dl>
 {% for fieldname, values in changes.items %}
-    <dt>{{ fieldname }}</dt>
+    <dt>{{ fieldname|capfirst }}</dt>
     <dd>
-        {% with values|first as old_value %}
-        {% with values|last as new_value %}
-        {% blocktrans %}from {{ old_value }} to {{ new_value }}{% endblocktrans %}
+        {% with values|first|safe as old_value %}
+        {% with values|last|safe as new_value %}
+        {% blocktrans %}from <em>{{ old_value }}</em> to <em>{{ new_value }}</em>{% endblocktrans %}
         {% endwith %}
         {% endwith %}
     </dd>
