- Added custom manager to "Event" model. - Added new field "public" to the "Event" model. Now events are visible only to attendees and author if they aren't set as "public". - Fixed "event_timeline" template and activity generation.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@508 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/events/event_detail.html
+++ b/themes/default/templates/events/event_detail.html
@@ -64,7 +64,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "[['author', 'created'], ['start', 'end'], ['location', 'status'], 'description', 'attendees', 'categories', 'tags']" %}
+                {% property_table object "[['author', 'created'], ['start', 'end'], ['status', 'public'], 'location', 'description', 'attendees', 'categories', 'tags']" %}
             </table>
             {% include "elements/comments.html" %}
         </div>
