Changed "is_lead" boolean field of "Partner" model to a field with predefined choices.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@512 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -280,6 +280,12 @@ DEFAULT_PHONE_TYPE = '0'
 
 # Partners management options.
 """
+LEAD_STATUS_CHOICES = (
+    ('FIRST', _('first contact')),
+)
+
+LEAD_DEFAULT_STATUS = 'FIRST'
+
 CURRENCIES = (
     ('AED', _('AED')),
 	('AFN', _('AFN')),
