Improved title rendering on "projects" app's templates.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@514 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -20,7 +20,7 @@
 
 {% block title %}
 <div class="title">
-    <h1>{{ object|escape|capfirst }}</h1>
+    <h1>{{ object|striptags|capfirst }}</h1>
     <h2>{% block subtitle %}{% trans "Dashboard" %}{% endblock %}</h2>
 </div>
 {% endblock %}
