--- a/themes/default/templates/projects/milestone_edit.html
+++ b/themes/default/templates/projects/milestone_edit.html
@@ -24,7 +24,7 @@
 {% block title %}
 <div class="title">
     {% if object.pk %}
-    <h1>{{ object }}</h1>
+    <h1>{{ object|striptags|capfirst }}</h1>
     <h2>{% trans 'Edit milestone' %}</h2>
     {% else %}
     <h1>{% trans 'Add milestone' %}</h1>
