Improved "SplitDateTime" field and widget.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@523 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -168,21 +168,14 @@ form .datepicker, form .timepicker {
 
 form .datepicker input {
     margin-right: 0;
-    width: 115px;
-    margin-left: 5px;
+    width: 140px;
     margin-bottom: 5px;
-}
-
-form .timepicker input {
-    margin-right: 0;
-    width: 20px;
-    margin-left: 5px;
 }
 
 .timepicker select {
     margin-right: 0;
-    width: 55px;
-    margin-left: 5px;
+    width: 45px;
+    margin-right: 6px;
 }
 
 /**
