property_table: it's now possible to specify a suffix to append to the rendered field value.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@526 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -68,7 +68,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "[['manager', 'deadline'], ['author', 'created'], ['progress', 'closed'], 'description', 'categories', 'tags']" %}
+                {% property_table object "[['manager', 'deadline'], ['author', 'created'], ['progress:%', 'closed'], 'description', 'categories', 'tags']" %}
             </table>
         </div>
         {% region object.dashboard %}
