--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -58,7 +58,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "['manager', ['author', 'created'], ['status', 'closed'], 'description', 'categories', 'tags']" %}
+                {% property_table object "['manager', ['author', 'created'], ['status', 'closed'], 'description', 'working_hours', 'categories', 'tags']" %}
             </table>
         </div>
         {% region object.dashboard %}
