--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -56,7 +56,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "[['author', 'assignee'], ['created', 'modified'], ['status', 'type'], ['milestone', 'urgency'], 'description', 'categories', 'tags']" %}
+                {% property_table object "[['author', 'assignee'], ['created', 'modified'], ['status', 'type'], ['milestone', 'urgency'], 'description', 'working_hours', 'categories', 'tags']" %}
             </table>
         </div>
         {% include "elements/comments.html" %}
