--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -46,7 +46,7 @@
 {% include 'elements/navigator.html' %}
 <div class="details">
     <table class="properties">
-        {% property_table object "[['created', 'closed'], ['start', 'end'], 'description', 'categories', 'tags']" %}
+        {% property_table object "[['created', 'closed'], ['start', 'end'], 'description', 'working_hours', 'categories', 'tags']" %}
     </table>
 </div>
 {% endblock %}
