--- a/themes/default/templates/partners/contact_edit.html
+++ b/themes/default/templates/partners/contact_edit.html
@@ -39,7 +39,11 @@
 {% endif %}
     {% csrf_token %}
     <table class="properties">
+        {% if object.pk %}
+        {% property_table form "[['firstname', 'lastname'], ['email', 'url'], ['main_address', 'main_phone_number'], 'tags', 'categories']" %}
+        {% else %}
         {% property_table form "[['firstname', 'lastname'], ['email', 'url'], 'tags', 'categories']" %}
+        {% endif %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
