--- a/themes/default/templates/partners/partner_detail.html
+++ b/themes/default/templates/partners/partner_detail.html
@@ -58,7 +58,7 @@
         {% block section %}
         <div class="details">
             <table class="properties">
-                {% property_table object "['is_managed', ['assignee', 'lead_status'], ['is_customer', 'is_supplier'], ['vat_number', 'currency'], ['language', 'timezone'], ['url', 'email'], 'description', 'categories', 'tags']" %}
+                {% property_table object "['is_managed', ['assignee', 'lead_status'], ['is_customer', 'is_supplier'], ['vat_number', 'currency'], ['language', 'timezone'], ['url', 'email'], ['main_address', 'main_phone_number'], 'description', 'categories', 'tags']" %}
             </table>
         </div>
         {% region object.dashboard %}
