--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -209,6 +209,7 @@ INSTALLED_APPS = (
     #'prometeo.projects',
 )
 
+# Authentication management options.
 AUTH_PROFILE_MODULE = 'auth.UserProfile'
 AUTH_EXPIRATION_DAYS = 2
 
@@ -231,7 +232,12 @@ LOGIN_REQUIRED_URLS_EXCEPTIONS = (
 if DEBUG:
     EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 
-# Taxonomy options.
+AUTHENTICATION_BACKENDS = (
+    'django.contrib.auth.backends.ModelBackend',
+    'prometeo.core.auth.backends.ObjectPermissionBackend',
+)
+
+# Taxonomy management options.
 SEARCH_IN_MODELS = (
     'auth.User',
     'taxonomy.Category',
