- Added new "core.auth.context_processors.auth" which adds the new "obj_perms" object to the request context. - Removed "obj" argument from "get_all_permissions" and "get_group_permissions" methods in the "ObjectPermissionBackend".
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@555 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -132,7 +132,9 @@ TEMPLATE_CONTEXT_PROCESSORS = (
     'django.core.context_processors.media',
     'django.core.context_processors.static',
     'django.core.context_processors.request',
-    'django.contrib.messages.context_processors.messages'
+    'django.contrib.messages.context_processors.messages',
+
+    'prometeo.core.auth.context_processors.auth',
 )
 
 # List of middleware classes to use.  Order is important; in the request phase,
