Changed project's tagline.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@573 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -34,7 +34,7 @@
         <div id="header">
             <div id="logo">
                 <h1 id="site-title">Prometeo</h1>
-                <h2 id="site-tagline">Free your work. <span>Free your business.</span></h2>
+                <h2 id="site-tagline">Free your business</h2>
             </div>
 
             <div id="nav">
